--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "homepage": "https://djdifee.github.io/home",
   "name": "djdifee.github.io",
   "version": "0.1.0",
-  "private": true,
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "webpack-dev-server --open",
+    "build": "webpack",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -23,13 +30,5 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
-  },
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "webpack-dev-server --open",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
   }
 }
