Started adding router, but page is now rendering blank

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "homepage": "https://djdifee.github.io/home",
   "name": "djdifee.github.io",
+  "author": "Kristoffer Lund",
   "version": "0.1.0",
   "scripts": {
     "predeploy": "npm run build",
@@ -28,7 +29,9 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
