--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,12 @@
 /coverage
 
 # production
-/build
+#/build
 
 # misc
 .DS_Store
-.idea/
+.idea
+.idea/workspace.xml
 .env.local
 .env.development.local
 .env.test.local
