--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,30 @@
 {
   "extends": "airbnb",
   "rules": {
-    "func-names": ["error", "never"]
+    // Regular eslint rules
+    "func-names": ["error", "never"],
+    "indent": ["error", "tab"],
+    "max-len": ["warn", {"code": 150}],
+    "no-console": 0,
+    "no-tabs": 0,
+    "no-unused-vars": 1,
+
+    // Rules specific for react
+    "react/forbid-prop-types": 0, // Turn this on if you require an even more strict control over prop types
+    "react/jsx-indent": [1, "tab"],
+    "react/jsx-indent-props": [1, "tab"],
+    "react/require-default-props": 0,
+    "react/sort-comp": [1, {
+      "order": [
+        "static-methods",
+        "lifecycle",
+        "render",
+        "everything-else"
+      ]}
+    ]
+  },
+  "globals": {
+    "document": false,
+    "fetch": false
   }
 }
