--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-scripts": "1.1.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
+    "stylelint": "^9.1.1",
+    "stylelint-webpack-plugin": "^0.10.3",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
