Updated url to correspond with change of username

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://djdifee.github.io/home",
-  "name": "djdifee.github.io",
+  "homepage": "https://kristofferlund.github.io/home",
+  "name": "kristofferlund.github.io",
   "author": "Kristoffer Lund",
   "version": "0.1.0",
   "scripts": {
