Added an example for sessionStorage

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Difee",
-  "name": "Difee homepage",
+  "short_name": "React",
+  "name": "Toolbox Reference - React",
   "icons": [
     {
       "src": "favicon.ico",
