--- a/.stylelintrc
+++ b/.stylelintrc
@@ -18,6 +18,6 @@
       "except": ["first-nested"],
       "ignore": ["after-comment"]
     } ],
-    "unit-whitelist": ["em", "rem", "%", "s", "px"]
+    "unit-whitelist": ["em", "rem", "%", "s", "px", "deg"]
   }
 }
