--- a/package.json
+++ b/package.json
@@ -7,15 +7,33 @@
     "deploy": "gh-pages -d build",
     "start": "webpack-dev-server --open",
     "build": "webpack",
-    "test": "react-scripts test --env=jsdom",
+    "test": "NODE_ENV=test jest",
+    "clean-test": "NODE_ENV=test jest --no-cache",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/fileMock.js",
+      "\\.(css|scss)$": "<rootDir>/config/jest/styleMock.js"
+    },
+    "transform": {
+      "^.+\\.jsx$": "babel-jest",
+      "^.+\\.js$": "babel-jest"
+    }
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.2.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -25,11 +43,12 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
-    "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^23.2.0",
     "node-sass": "^4.9.0",
     "path": "^0.12.7",
     "react-scripts": "1.1.1",
+    "regenerator-runtime": "^0.12.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "stylelint": "^9.3.0",
