--- a/package.json
+++ b/package.json
@@ -11,23 +11,6 @@
     "clean-test": "NODE_ENV=test jest --no-cache",
     "eject": "react-scripts eject"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/fileMock.js",
-      "\\.(css|scss)$": "<rootDir>/config/jest/styleMock.js"
-    },
-    "transform": {
-      "^.+\\.jsx$": "babel-jest",
-      "^.+\\.js$": "babel-jest"
-    }
-  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
@@ -36,6 +19,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^2.0.0",
@@ -47,6 +32,7 @@
     "jest": "^23.2.0",
     "node-sass": "^4.9.0",
     "path": "^0.12.7",
+    "react-addons-test-utils": "^15.6.2",
     "react-scripts": "1.1.1",
     "regenerator-runtime": "^0.12.0",
     "sass-loader": "^6.0.7",
