--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deploy": "gh-pages -d build",
     "start": "webpack-dev-server --open",
     "build": "webpack",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --coverage",
+    "test:watch": "NODE_ENV=test jest --watch",
     "clean-test": "NODE_ENV=test jest --no-cache",
     "eject": "react-scripts eject"
   },
