--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://kristofferlund.github.io/home",
-  "name": "kristofferlund.github.io",
+  "name": "toolbox-reference-react",
   "author": "Kristoffer Lund",
   "version": "0.1.0",
   "scripts": {
@@ -8,45 +7,51 @@
     "deploy": "gh-pages -d build",
     "start": "webpack-dev-server --open",
     "build": "webpack",
-    "test": "react-scripts test --env=jsdom",
+    "test": "NODE_ENV=test jest --coverage",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "clean-test": "NODE_ENV=test jest --no-cache",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.2.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.18.2",
+    "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
-    "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
+    "jest": "^23.2.0",
+    "node-sass": "^4.9.0",
     "path": "^0.12.7",
+    "react-addons-test-utils": "^15.6.2",
     "react-scripts": "1.1.1",
+    "regenerator-runtime": "^0.12.0",
     "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.2",
-    "stylelint": "^9.1.1",
-    "stylelint-webpack-plugin": "^0.10.3",
-    "webpack": "^3.11.0",
+    "style-loader": "^0.20.3",
+    "stylelint": "^9.3.0",
+    "stylelint-webpack-plugin": "^0.10.5",
+    "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "bootstrap": "^4.0.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "bootstrap": "^4.1.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
   }
