--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
-  "presets": ["env", "react"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "env": {
     "test": {
-      "presets": ["env", "react"],
-      "plugins": ["transform-es2015-modules-commonjs"]
+      "presets": ["@babel/preset-env", "@babel/preset-react"],
+      "plugins": ["@babel/plugin-transform-modules-commonjs"]
     }
   }
 }
