--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "webpack",
     "test": "NODE_ENV=test jest --coverage",
     "test:watch": "NODE_ENV=test jest --watch",
-    "clean-test": "NODE_ENV=test jest --no-cache",
-    "eject": "react-scripts eject"
+    "clean-test": "NODE_ENV=test jest --no-cache"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -18,43 +17,45 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^8.2.5",
-    "babel-jest": "^23.2.0",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^23.2.0",
-    "node-sass": "^4.9.0",
+    "html-webpack-plugin": "^3.2.0",
+    "i": "^0.3.6",
+    "jest": "^23.6.0",
+    "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "react-addons-test-utils": "^15.6.2",
-    "react-scripts": "1.1.1",
-    "regenerator-runtime": "^0.12.0",
+    "regenerator-runtime": "^0.12.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "stylelint": "^9.3.0",
+    "stylelint": "^9.10.1",
     "stylelint-webpack-plugin": "^0.10.5",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.1"
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
     "babel-runtime": "^6.26.0",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.2.1",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.2"
   }
 }
