--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,6 @@
 {
   "extends": "airbnb",
   "rules": {
-    // Regular eslint rules
     "func-names": ["error", "never"],
     "indent": ["error", "tab"],
     "max-len": ["warn", {"code": 150}],
@@ -10,8 +9,7 @@
     "no-tabs": 0,
     "no-unused-vars": 1,
 
-    // Rules specific for react
-    "react/forbid-prop-types": 0, // Turn this on if you require an even more strict control over prop types
+    "react/forbid-prop-types": 0,
     "react/jsx-indent": [1, "tab"],
     "react/jsx-indent-props": [1, "tab"],
     "react/require-default-props": 0,
@@ -24,7 +22,6 @@
       ]}
     ],
 
-    // JSX specific rules
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/no-static-element-interactions": 0
   },
