--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "predeploy": "npm run build",
     "start": "webpack-dev-server --mode=development --open",
     "build": "webpack",
+    "lint:js": "eslint --ext .jsx src",
     "test": "NODE_ENV=test jest --coverage",
     "test:watch": "NODE_ENV=test jest --watch",
     "clean-test": "NODE_ENV=test jest --no-cache"
